tools/tests/ui/fail/l1053.cnf
// Test file for error code: L1053
// Expected error: Missing DATA-CSV character in type annotation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
